# PicFlic

./: .dockerignore  .env.devbot.example  .env.example  .env.prod  .gitignore  Dockerfile  README.md  TESTING.md  agent.md  gcp_deploy_manual.md  implementation.md  implementation_details.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-service.yaml
data/: pictoagent.db
scripts/: backfill_vocab_example_sentences.py  clear_test_bot_webhook.sh  convert_mov_to_mp4.sh  print_telegram_webhook_info.sh  run_local_test_bot.sh  set_test_bot_webhook.sh  start_local_test_stack.sh
src/: __init__.py  agent.py  api.py  bot.py  config.py  db.py  logging_config.py  logging_context.py  main.py  mcp.py  models.py  openai_schema.py  query_utils.py  utils.py  vocabulary_review.py
src/agents/: __init__.py  main_agent.py  vocabulary_agent.py
src/bot/: __init__.py  application.py  constants.py  corrections.py  deletions.py  formatting.py  handlers.py  persistence.py  reviews.py  state.py
src/db/: process.md
src/models/: __init__.py  common.py  expense.py  nutrition.py  query.py  recipe.py  records.py  routing.py  vocabulary.py
src/pictoagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vocab_bot/: __init__.py  application.py  conversation.py  dispatch.py  handlers.py
src/vocab_conversation_bot/: __init__.py  application.py  handlers.py
tests/unit/: test_agent.py  test_agent_workflow.py  test_api.py  test_api_lifespan.py  test_bot.py  test_config.py  test_db.py  test_logging.py  test_query_utils.py  test_utils.py  (+5 more)
(+18 files in other folders)
