[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictoagent"
version = "0.1.0"
description = "A lightweight personal agent that tracks food and drinks from photos using langgraph and an MCP-like interface."
authors = [
  {name = "PictoAgent"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "langgraph>=1.1",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
pictoagent = "src.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
